--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,10 @@
+html, body {
+  height: 100%; /* Ensures the root and body are also taking the full height */
+  margin: 0; /* Removes default margin */
+  padding: 0; /* Removes default padding */
+}
+
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
